Fixed overflow

--- a/public/Homepage.css
+++ b/public/Homepage.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    
 }
 .navbar{
     padding: 2rem 2rem 2rem 2rem;
